fix transfrom origin not working on mobile by moving property from line to whole hamburger

--- a/css/styles.css
+++ b/css/styles.css
@@ -137,12 +137,14 @@ nav.glass button.button-one {
   background: transparent;
   /* border: 1px solid; */
   border-radius: 1rem;
+  -webkit-transform-origin: center;
+  transform-origin: center;
 }
 
 nav.glass button.button-one .burgerline {
   transition: y 0.2s ease-in 0.2s, rotate 0.2s ease-in, opacity 0ms 0.2s;
-  -webkit-transform-origin: center;
-  transform-origin: center;
+  /* -webkit-transform-origin: center;
+  transform-origin: center; */
 }
 nav.glass button.button-one[aria-expanded="true"] .burgerline {
   transition: y 0.2s ease-in, rotate 0.2s ease-in 0.2s, opacity 0ms 0.2s;
